add game_service
