# backend/app/game/service/cmd/server/assets/openapi.yaml
@@ -3,8 +3,7 @@
 
 openapi: 3.0.3
 info:
-    title: GameAccountService API
-    description: 游戏账号服务
+    title: ""
     version: 0.0.1
 paths:
     /game/v1/game_accounts:
@@ -158,6 +157,26 @@ paths:
                 "200":
                     description: OK
                     content: {}
+    /game/v1/test/user/{id}:
+        get:
+            tags:
+                - TestService
+            description: 获取用户测试
+            operationId: TestService_GetUser
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: uint32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetUserResponse'
 components:
     schemas:
         CreateGameAccountRequest:
@@ -219,6 +238,24 @@ components:
                     type: boolean
                     description: 删除标志
             description: 游戏账号
+        GetUserResponse:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                username:
+                    type: string
+                nickname:
+                    type: string
+                email:
+                    type: string
+                mobile:
+                    type: string
+                tenantId:
+                    type: integer
+                    format: uint32
+            description: 获取用户测试 - 响应
         ListGameAccountResponse:
             type: object
             properties:
@@ -245,3 +282,6 @@ components:
             description: 更新游戏账号 - 请求
 tags:
     - name: GameAccountService
+      description: 游戏账号服务
+    - name: TestService
+      description: 测试服务
